# machbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  core.cpp  core.h  core.ui  info.h  machbox.pro  main.cpp
src/: core.cpp  core.h  info.h  main.cpp
src/headers/: core.h
src/hle/arm/: CpuState.h  Decode.inl  Inst_Bits.inl  Inst_Branch.inl  Inst_Data.inl  Inst_Flags.inl  Inst_Mem.inl  Inst_Misc.inl  Inst_Multiple.inl  Inst_Multiply.inl  Inst_Packed.inl  Inst_Shift.inl  Inst_Vfp.inl  Inst_VfpMem.inl  Instruction.h
src/hle/misc/: File.cpp  File.h  Memory.h  types.h
src/hle/parse/: PlistBReader.cpp  PlistBReader.h  PlistNode.h  PlistNode.inl
